added billboard html content

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,20 @@
     <title>FEBUARY MAGAZINE</title>
 </head>
 <body>
+    <img id="leftDoor" src="../static/textures/elevator_leftDoor.png"></img>
+    <img id="rightDoor" src="../static/textures/elevator_RightDoor.png"></img>
+    <div id="billBoard">
+        <img src="../static/textures/billboard/1.jpg"></img>
+        <img src="../static/textures/billboard/2.jpg"></img>
+        <img src="../static/textures/billboard/3.png"></img>
+        <img src="../static/textures/billboard/4.png"></img>
+        <img src="../static/textures/billboard/5.png"></img>
+        <img src="../static/textures/billboard/6.png"></img>
+        <img src="../static/textures/billboard/7.png"></img>
+        <img src="../static/textures/billboard/8.png"></img>
+        <img src="../static/textures/billboard/9.png"></img>
+    </div>
+    <div id="css"></div>
     <canvas class="webgl"></canvas>
 </body>
 </html>
