added android support for html pop up, added placeholder video

--- a/src/index.html
+++ b/src/index.html
@@ -21,5 +21,9 @@
     </div>
     <div id="css"></div>
     <canvas class="webgl"></canvas>
+    <video id="video" loop crossOrigin="anonymous" autoplay="true" muted="muted" playsinline style="display:none">
+		<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"
+			type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
+	</video>
 </body>
 </html>
