--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,9 @@
         <img src="../static/textures/billboard/8.png"></img>
         <img src="../static/textures/billboard/9.png"></img>
     </div>
+    <div id="overlay">
+        <button id="startButton">Start</button>
+    </div>
     <div id="css"></div>
     <canvas class="webgl"></canvas>
     <video id="video" loop crossOrigin="anonymous" autoplay="true" muted="muted" playsinline style="display:none">
