added crosshair aiming for mobile selection

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
         <img src="../static/textures/billboard/9.png"></img>
     </div>
     <div id="overlay">
-        <button id="startButton">Start</button>
+        <button id="startButton">Use XR Controls</button>
     </div>
     <div id="css"></div>
     <canvas class="webgl"></canvas>
