--- a/src/index.html
+++ b/src/index.html
@@ -25,8 +25,8 @@
     <div id="css"></div>
     <canvas class="webgl"></canvas>
     <video id="video" loop crossOrigin="anonymous" autoplay="true" muted="muted" playsinline style="display:none">
-		<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"
-			type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
+		<source src="https://drive.google.com/uc?export=download&id=1iooUft5i8Z-25FeuHFDDegKvebCXvWYy"
+			type='video/mp4'>
 	</video>
 </body>
 </html>
