used glitch cdn for video hosting

--- a/src/index.html
+++ b/src/index.html
@@ -25,8 +25,7 @@
     <div id="css"></div>
     <canvas class="webgl"></canvas>
     <video id="video" loop crossOrigin="anonymous" autoplay="true" muted="muted" playsinline style="display:none">
-		<source src="https://drive.google.com/uc?export=download&id=1iooUft5i8Z-25FeuHFDDegKvebCXvWYy"
-			type='video/mp4'>
+		<source src="https://cdn.glitch.me/2d0a71f5-3f55-4770-9946-3e51326e2dbe/ORBIS%20IGNIS.mp4?v=1673311106555"  type='video/mp4'>
 	</video>
 </body>
 </html>
