added scan button, url params

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <title>FEBUARY MAGAZINE</title>
 </head>
 <body>
+    <button id="scanner">Scan To Enter</button>
     <video id="qr"></video>
     <img id="leftDoor" src="../static/textures/elevator_leftDoor.png"></img>
     <img id="rightDoor" src="../static/textures/elevator_rightDoor.png"></img>
